--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
@@ -17,6 +18,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.0.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +46,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:3005/api",
   "devDependencies": {
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.13",
